--- a/HL_Administration/views/index.html
+++ b/HL_Administration/views/index.html
@@ -125,8 +125,13 @@
                   placeholder="Nhập từ khóa"
                   aria-label="Recipient's username"
                   aria-describedby="basic-addon2"
+                  onchange="lookUpProduct()"
                 />
-                <div class="input-group-append" onclick="searchProduct()">
+                <div
+                  class="input-group-append"
+                  style="cursor: pointer"
+                  onclick="searchProduct()"
+                >
                   <span class="input-group-text" id="basic-addon2"
                     ><i class="fa fa-search"></i
                   ></span>
@@ -264,11 +269,10 @@
     <script src="https://code.highcharts.com/modules/series-label.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
+    <!-- <script src="/HL_Administration/controllers/validation.js"></script> -->
     <script src="../models/Product.js"></script>
     <script src="../services/productAPI.js"></script>
     <script src="/Asset/JS/productGetPrice_Admin.js"></script>
-    <!-- <script src="/HL_Administration/controllers/validation.js"></script> -->
     <script src="/HL_Administration/controllers/sortTable.js"></script>
     <script src="../controllers/Administration.js"></script>
   </body>
